--- a/FirstApp/gradle/libs.versions.toml
+++ b/FirstApp/gradle/libs.versions.toml
@@ -8,6 +8,8 @@ material = "1.10.0"
 activity = "1.10.1"
 constraintlayout = "2.1.4"
 recyclerview = "1.4.0"
+roomRuntime = "2.8.1"
+roomCompiler = "2.8.1"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -18,6 +20,8 @@ material = { group = "com.google.android.material", name = "material", version.r
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
+room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "roomCompiler" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
